--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       </div>
     </div>
     <footer>
-      <a href="https://github.com/lottestars/SheCodesPlus-Homework">
-        Open source-code
+      <a href="https://github.com/lottestars/shecodesweatherapp">
+        Open-source code
       </a>
       , by Charlotte
     </footer>
